feat:集成MongoDB做持久化

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,4 @@ langchain4j.community.dashscope.chat-model.model-name=qwen-max
 
 # log level
 #logging.level.root=debug
-
+spring.data.mongodb.uri=mongodb://localhost:27017/chat_memory_db
