--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,11 @@ langchain4j.community.dashscope.chat-model.model-name=qwen-max
 # log level
 #logging.level.root=debug
 spring.data.mongodb.uri=mongodb://localhost:27017/chat_memory_db
+
+
+spring.datasource.url=jdbc:mysql://localhost:13306/xiaoyixian?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
