--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,12 +16,19 @@ langchain4j.open-ai.chat-model.log-requests=true
 langchain4j.open-ai.chat-model.log-responses=true
 # ollama
 langchain4j.ollama.chat-model.base-url=http://172.31.109.43:11434
-langchain4j.ollama.chat-model.model-name=gemma3:27b
+langchain4j.ollama.chat-model.model-name=qwq:latest
 langchain4j.ollama.chat-model.log-requests=true
 langchain4j.ollama.chat-model.log-responses=true
 # Qwen
 langchain4j.community.dashscope.chat-model.api-key=${DASH_SCOPE_API_KEY}
 langchain4j.community.dashscope.chat-model.model-name=qwen-max
+# Streaming
+langchain4j.community.dashscope.streaming-chat-model.api-key=${DASH_SCOPE_API_KEY}
+langchain4j.community.dashscope.streaming-chat-model.model-name=qwen-plus
+
+
+langchain4j.community.dashscope.embedding-model.api-key=${DASH_SCOPE_API_KEY}
+langchain4j.community.dashscope.embedding-model.model-name=text-embedding-v3
 
 
 # log level
